--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,8 @@
 [user]
-  name = Ben Hamill
-  email = git-commits@benhamill.com
+  name = Kyle Rockman
+  email = kyle.rockman@mac.com
+[gitreview]
+  username = rocktavious
 [alias]
   st = status
   co = checkout
@@ -19,11 +21,20 @@
   diff = true
   status = true
 [merge]
-  tool = vimdiff
+  tool = p4mergetool
+[mergetool "p4mergetool"]
+  cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $PWD/$BASE $PWD/$REMOTE $PWD/$LOCAL $PWD/$MERGED
+  trustExitCode = false
+[mergetool]
+  keepBackup = false
+[diff]
+  tool = p4mergetool
+[difftool "p4mergetool"]
+  cmd = /Applications/p4merge.app/Contents/Resources/launchp4merge $LOCAL $REMOTE
 [pull]
   default = current
 [push]
   default = current
 [github]
-  user = benhamill
+  user = rocktavious
   token = $GITHUB_TOKEN ; Set in ~/.bashrc.local
