--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -11,6 +11,7 @@
   p = pull --prune
   pr = pull-request
   amend = commit --amend --no-edit
+  unpack-refs = "!bash -c 'IFS=$''\\n''; for f in $(git show-ref --heads); do /bin/echo ''Writing  '' $(echo $f | cut -c42-); echo $(echo $f | cut -c1-40) > \"${GIT_DIR:-.git}/$(echo $f | cut -c42-)\"; done'"
 [core]
   excludesfile = ~/.gitignore
   autocrlf = input
