--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Kyle Rockman
-  email = kyle.rockman@mac.com
+	name = Kyle Rockman
+	email = krockman@underarmour.com
 [gitreview]
   username = rocktavious
 [alias]
