--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -5,7 +5,7 @@ Host home
     IdentityFile ~/.ssh/id_rsa
 
 Host *
-    User kyle.rockman
+    User krockman
     StrictHostKeyChecking no
     UserKnownHostsFile /dev/null
 
