add stuff from ua computer

--- a/home/.aws/config
+++ b/home/.aws/config
@@ -1,8 +1,23 @@
 [default]
 region = us-east-1
 output = json
-[profile devworkout]
+[profile master]
 region = us-east-1
+output = json
+[profile run]
+region = us-east-1
+output = json
 [profile rockman]
 output = json
 region = us-east-1
+[profile tokyo]
+region = ap-northeast-1
+output = json
+[profile k8s]
+region = us-east-1
+output = json
+[profile ua-ecm]
+region = us-east-1
+output = json
+[profile k8s-auth]
+credential_process = sh -c "~/.kube/vault-auth.sh"
